tests/snapshots/tui_snapshot_test__tui_snapshots__call_flow_timestamp_scaled.snap
---
source: tests/tui_snapshot_test.rs
expression: output
---
 Live capture: any    Dialogs: 3 shown of 3    Autoscroll: on
 Capture filter (BPF): none
 Time: Scaled
             10.0.0.1:5060                    10.0.0.2:5060 ┌ [1/4] INVITE ────────────────────────┐
             │                                            │ │INVITE sip:1002@example.com SIP/2.0   │
     +0.000s │───────────────── INVITE ──────────────────▶│ │From: "1001" <sip:1001@example.com>;ta│
    (1000ms) ┊                                            ┊ │g=t1                                  │
             ┊                                            ┊ │To: "1002" <sip:1002@example.com>     │
             ┊                                            ┊ │Call-ID: call-1@test                  │
             ┊                                            ┊ │CSeq: 1 INVITE                        │
     +1.000s │◀╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌ 180 Ringing ╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌│ │Content-Length: 0                     │
    (1000ms) ┊                                            ┊ │                                      │
             ┊                                            ┊ │                                      │
             ┊                                            ┊ │                                      │
             ┊                                            ┊ │                                      │
     +1.000s │◀╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌ 200 OK ╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌│ │                                      │
   (60000ms) ┊                                            ┊ │                                      │
             ┊                                            ┊ │                                      │
             ┊                                            ┊ │                                      │
             ┊                                            ┊ │                                      │
             ┊                                            ┊ │                                      │
             ┊                                            ┊ │                                      │
             ┊                                            ┊ │                                      │
             ┊                                            ┊ │                                      │
    +60.000s │─────────────────── BYE ───────────────────▶│ │                                      │
                                                            │                                      │
                                                            │                                      │
             │                                            │ │                                      │
             10.0.0.1:5060                    10.0.0.2:5060 └──────────────────────────────────────┘
Esc Back  F1 Help  ↑↓ Move  Enter Raw  d SDP  t Time  c Color  R Detail
