tests/snapshots/tui_snapshot_test__tui_snapshots__call_list_column_selector_popup.snap
---
source: tests/tui_snapshot_test.rs
expression: output
---
 Current Mode: Online (any)    Dialogs: 3 (3 displayed)  [A]
 Match Expression:     BPF Filter:
 Display Filter:
  # ▲   Method    From       To          State      Msgs +Prev    PDD    Duratio
> [ ]1  INVITE    ┌ Columns ─────────────────────────────────┐0s  1000ms 1m2s
  [ ]2  INVITE    │> [x] #                                   │0s         1.0s
  [ ]3  INVITE    │  [x] Method                              │0s         2.0s
                  │  [x] From                                │
                  │  [x] To                                  │
                  │  [x] Source                              │
                  │  [x] Destination                         │
                  │  [x] State                               │
                  │  [x] Msgs                                │
                  │  [x] Date                                │
                  │  [x] PDD                                 │
                  │  [x] Duration                            │
                  │                                          │
                  │  Space: toggle  Enter: apply  Esc: close │
                  │  s: save layout to config                │
                  └──────────────────────────────────────────┘



Esc Quit  F1 Help  Enter Show  Tab Streams  F2 Save  F7 Filter
