tests/snapshots/tui_snapshot_test__tui_snapshots__call_list_empty.snap
---
source: tests/tui_snapshot_test.rs
expression: output
---
 Live capture: any    Dialogs: 0 shown of 0    Autoscroll: on
 Capture filter (BPF): none
 View filter: none
  # ▲    Method    From       To         State      Msgs +Prev    PDD    Duratio

  No SIP dialogs found.

  Waiting for SIP traffic on the capture source…
  Check the interface and the capture filter on the lines above.
  F1 shows help, q quits.













Esc Quit  F1 Help  Enter Open call  Tab Streams  F2 Save  F7 Filter
