tests/snapshots/tui_snapshot_test__tui_snapshots__call_list_failed_dialog_styling.snap
---
source: tests/tui_snapshot_test.rs
expression: output
---
 Live capture: any    Dialogs: 1 shown of 1    Autoscroll: on
 Capture filter (BPF): none
 View filter: none
  # ▲    Method    From       To         State      Msgs +Prev    PDD    Duratio
> [ ] 1  INVITE    1003       1004       FAILED ⚠   2    +0.000s         1.0s


















Esc Quit  F1 Help  Enter Open call  Tab Streams  F2 Save  F7 Filter
