tests/snapshots/tui_snapshot_test__tui_snapshots__call_list_search_active.snap
---
source: tests/tui_snapshot_test.rs
expression: output
---
 Current Mode: Online (any)    Dialogs: 3 (3 displayed)  [A]
 Match Expression:     BPF Filter:
 /test
  # ▲   Method    From       To          State      Msgs +Prev    PDD    Duratio
> [ ]1  INVITE    1001       1002        Completed  4    +0.000s  1000ms 1m2s
  [ ]2  INVITE    1003       1004        FAILED ⚠   2    +5.000s         1.0s
  [ ]3  INVITE    1005       1006        InCall     2    +5.000s         2.0s
















Esc Quit  F1 Help  Enter Show  Tab Streams  F2 Save  F7 Filter
